Added heap usage graph (visible with a map)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -38,6 +38,10 @@ commands:
         description: ''
         permission: ''
         usage: '/<command>'
+    graph:
+        description: ''
+        permission: ''
+        usage: '/<command>'
 
 permissions:
     bla:
