--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,4 +8,9 @@ traffic-counter: true
 # thread. If this not the cause the plugin will throw an exception to inform you. Therefore
 # you can detect thread-safety issues which could end up in ConcurrentModificationExceptions
 # or other issues.
-thread-safety-check: true
+thread-safety-check: false
+
+# Check if a server (especially a plugin) is doing block I/O operations on the main Thread.
+# Operations like SQL-, HTTP-Request or Scoket-Connections should be performed in a seperate Thread.
+# If this is not the case, the server will wait for the response and therefore causes lags.
+thread-block-detection: false
