Added /native command + a lot of other optimizations

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,3 +14,24 @@ thread-safety-check: false
 # Operations like SQL-, HTTP-Request or Scoket-Connections should be performed in a seperate Thread.
 # If this is not the case, the server will wait for the response and therefore causes lags.
 thread-block-detection: false
+
+# With this options it's possible to access more native features of the OS like:
+# * CPU MHZ
+# * File reads/writes (per second or since startup)
+# * Network download/upload (per second or since startup)
+# * OS uptime
+# * Linux/Unix load
+# * Network adapter speed
+# * RAM cache
+# * CPU i/o wait percentage
+#
+# This makes it possible to use graphs also for these infos. Similar to the Ubuntu util:
+# System load indicator: http://i.imgur.com/sxTfTjB.png
+#
+# Download it from here: https://support.hyperic.com/display/SIGAR/Home#Home-download
+# Then place the driver for your OS into the plugin folder where this config is located.
+# You can find the drivers in the zip file in the folder "hyperic-sigar-1.6.4/sigar-bin/lib"
+#
+# If you don't know which driver you need, you can invoke /env or activate this option and
+# invoke /hardware - This plugin will show which driver it exactly want.
+native-library: false
