--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>LagMonitor</name>
-    <version>1.2</version>
+    <version>1.3</version>
     <inceptionYear>2016</inceptionYear>
     <url>http://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
     <description>
@@ -131,6 +131,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.fusesource</groupId>
+            <artifactId>sigar</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
         <!--Netty work library of Minecraft
         This is added to read the amount of bytes which are sent or received-->
         <dependency>
@@ -140,10 +146,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Included in Craftbukkit-->
         <dependency>
-            <groupId>org.fusesource</groupId>
-            <artifactId>sigar</artifactId>
-            <version>1.6.4</version>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>1.11</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
