Added whitelist for certain commands for specific users

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -70,3 +70,19 @@ monitor-save-interval: 900
 # Some information might be NULL if you disabled the feature above
 # For example: native and minecraft-traffic-counter
 native-save-interval: 1200
+
+# A permissions independent way to whitelist certain commands
+#
+# Everything starts with 'whitelist-' and then the command name
+#
+# Here an example for the native command:
+# whitelist-native:
+#     - PlayerName
+#     - Example
+whitelist-commandname:
+    - PlayerName
+    - Example
+
+# You can add as many commands as you want to
+# If the command doesn't exist here it won't be whitelisted at all
+# Everyone who has the permission for that command can then use it.
