Add debug code for traffic reader

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,6 +11,8 @@ description: |
 website: ${project.url}
 dev-url: ${project.url}
 
+softdepend: [PacketListenerApi]
+
 commands:
     ping:
         description: 'Gets the ping of the selected player'
