Remove ClassUtil of PaperSpigot too

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
             <version>1.11-R0.1-SNAPSHOT</version>
+            <!--<version>1.12-pre2-SNAPSHOT</version>-->
             <scope>provided</scope>
         </dependency>
 
