Fix plugin name detection

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>LagMonitor</name>
-    <version>1.14</version>
+    <version>1.14.2</version>
     <inceptionYear>2016</inceptionYear>
     <url>http://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
     <description>
@@ -120,8 +120,8 @@
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.11-R0.1-SNAPSHOT</version>
-            <!--<version>1.12-pre2-SNAPSHOT</version>-->
+            <!--<version>1.11-R0.1-SNAPSHOT</version>-->
+            <version>1.12-pre2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
