--- a/pom.xml
+++ b/pom.xml
@@ -120,9 +120,15 @@
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <!--<version>1.11-R0.1-SNAPSHOT</version>-->
-            <version>1.12-pre2-SNAPSHOT</version>
+            <version>1.11-R0.1-SNAPSHOT</version>
+            <!--<version>1.12-pre2-SNAPSHOT</version>-->
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
