--- a/pom.xml
+++ b/pom.xml
@@ -8,28 +8,17 @@
     <packaging>jar</packaging>
 
     <name>LagMonitor</name>
-    <version>1.15</version>
+    <version>1.16</version>
     <inceptionYear>2016</inceptionYear>
-    <url>http://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
+    <url>https://dev.bukkit.org/bukkit-plugins/LagMonitor/</url>
     <description>
         Monitors your Minecraft server for Lags
     </description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <powermock.version>1.6.6</powermock.version>
+        <powermock.version>1.7.0</powermock.version>
     </properties>
-
-    <issueManagement>
-        <system>GitHub</system>
-        <url>https://github.com/games647/LagMonitor/issues</url>
-    </issueManagement>
-
-    <scm>
-        <url>https://github.com/games647/LagMonitor</url>
-        <connection>scm:git:git://github.com/games647/LagMonitor.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:games647/LagMonitor.git</developerConnection>
-    </scm>
 
     <build>
         <defaultGoal>install</defaultGoal>
@@ -44,24 +33,13 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <outputDirectory>${outputDir}</outputDirectory>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.0.0</version>
                 <configuration>
                     <artifactSet>
                         <includes>
@@ -91,14 +69,6 @@
                 <!--Replace variables-->
                 <filtering>true</filtering>
             </resource>
-
-            <!--Add the license to jar in order to see it in the final jar-->
-            <resource>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>LICENSE</include>
-                </includes>
-            </resource>
         </resources>
     </build>
 
@@ -106,7 +76,7 @@
         <!--Bukkit-Server-API -->
         <repository>
             <id>spigot-repo</id>
-            <url>http://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
 
         <repository>
@@ -133,7 +103,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12-pre2-SNAPSHOT</version>
+            <version>1.12-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -149,14 +119,6 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>4.0.23.Final</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!--Included in Craftbukkit-->
-        <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
-            <version>1.11</version>
             <scope>provided</scope>
         </dependency>
 
